fix aws specific PostStart is appended to daemonset
Fixes: #30223

Signed-off-by: chaunceyjiang <chaunceyjiang@gmail.com>

--- a/install/kubernetes/cilium/templates/cilium-agent/daemonset.yaml
+++ b/install/kubernetes/cilium/templates/cilium-agent/daemonset.yaml
@@ -214,7 +214,7 @@ spec:
         {{- end }}
         {{- if .Values.cni.install }}
         lifecycle:
-          {{- if ne .Values.cni.chainingMode "aws-cni" }}
+          {{- if eq .Values.cni.chainingMode "aws-cni" }}
           postStart:
             exec:
               command:
