--- a/.github/workflows/tests-datapath-verifier.yaml
+++ b/.github/workflows/tests-datapath-verifier.yaml
@@ -72,22 +72,22 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '4.19-20240110.080621'
             ci-kernel: '419'
-          # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '5.4-20240110.080621'
             ci-kernel: '54'
-          # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '5.10-20240110.080621'
             ci-kernel: '510'
-          # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '5.15-20240110.080621'
             ci-kernel: '510'
-          # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '6.1-20240110.080621'
             ci-kernel: '61'
-          # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: 'bpf-next-20240122.013132'
             ci-kernel: 'netnext'
     timeout-minutes: 60
