gh: ci-verifier: use lvh-images/complexity-test as renovate dependency
[ upstream commit 282311462982d0dd25853ba342802d62650708f9 ]

ci-verifier uses the lvh complexity-test image, not the kind image.
Adjust the dependency accordingly.

Signed-off-by: Julian Wiedmann <jwi@isovalent.com>
Signed-off-by: Nicolas Busseneau <nicolas@isovalent.com>

--- a/.github/workflows/tests-datapath-verifier.yaml
+++ b/.github/workflows/tests-datapath-verifier.yaml
@@ -72,19 +72,19 @@ jobs:
       fail-fast: false
       matrix:
         include:
-            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '4.19-20240131.102043'
             ci-kernel: '419'
-            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '5.4-20240131.102043'
             ci-kernel: '54'
-            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '5.10-20240131.102043'
             ci-kernel: '510'
-            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '5.15-20240131.102043'
             ci-kernel: '510'
-            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '6.1-20240131.102043'
             ci-kernel: '61'
             # We don't want to update bpf-next after branching
