--- a/install/kubernetes/cilium/templates/hubble-relay/service.yaml
+++ b/install/kubernetes/cilium/templates/hubble-relay/service.yaml
@@ -4,10 +4,14 @@ apiVersion: v1
 metadata:
   name: hubble-relay
   namespace: {{ .Release.Namespace }}
-  {{- with .Values.hubble.relay.annotations }}
   annotations:
+    {{- with .Values.hubble.relay.annotations }}
     {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- end }}
+    {{- if and .Values.hubble.relay.prometheus.enabled (not .Values.hubble.relay.prometheus.serviceMonitor.enabled) }}
+    prometheus.io/scrape: "true"
+    prometheus.io/port: {{ .Values.hubble.relay.prometheus.port | quote }}
+    {{- end }}
   labels:
     k8s-app: hubble-relay
     app.kubernetes.io/name: hubble-relay
