--- a/.github/workflows/conformance-ginkgo.yaml
+++ b/.github/workflows/conformance-ginkgo.yaml
@@ -275,6 +275,7 @@ jobs:
         id: provision-vh-vms
         uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
         with:
+          lvh-version: v0.0.15
           test-name: datapath-conformance
           install-dependencies: true
           image-version: ${{ matrix.kernel }}
@@ -290,6 +291,7 @@ jobs:
         timeout-minutes: 5
         uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
         with:
+          lvh-version: v0.0.15
           provision: 'false'
           cmd: |
             cd /host/
@@ -359,6 +361,7 @@ jobs:
         timeout-minutes: 40
         uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
         with:
+          lvh-version: v0.0.15
           provision: 'false'
           cmd: |
             cd /host/test/
@@ -419,6 +422,7 @@ jobs:
         if: ${{ !success() && steps.provision-vh-vms.outcome == 'success' }}
         uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
         with:
+          lvh-version: v0.0.15
           provision: 'false'
           cmd: |
             cd /host
