--- a/.github/workflows/conformance-ginkgo.yaml
+++ b/.github/workflows/conformance-ginkgo.yaml
@@ -273,7 +273,7 @@ jobs:
 
       - name: Provision LVH VMs
         id: provision-vh-vms
-        uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
+        uses: cilium/little-vm-helper@55e5a5fae11b0872a7b2926e96625dded67cf286
         with:
           lvh-version: v0.0.15
           test-name: datapath-conformance
@@ -289,7 +289,7 @@ jobs:
 
       - name: Provision kind
         timeout-minutes: 5
-        uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
+        uses: cilium/little-vm-helper@55e5a5fae11b0872a7b2926e96625dded67cf286
         with:
           lvh-version: v0.0.15
           provision: 'false'
@@ -359,7 +359,7 @@ jobs:
       - name: Run tests
         id: run-tests
         timeout-minutes: 40
-        uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
+        uses: cilium/little-vm-helper@55e5a5fae11b0872a7b2926e96625dded67cf286
         with:
           lvh-version: v0.0.15
           provision: 'false'
@@ -420,7 +420,7 @@ jobs:
 
       - name: Fetch artifacts
         if: ${{ !success() && steps.provision-vh-vms.outcome == 'success' }}
-        uses: cilium/little-vm-helper@e1c8135d459ee77c569f4586c1c7954244d9fa69 # v0.0.15
+        uses: cilium/little-vm-helper@55e5a5fae11b0872a7b2926e96625dded67cf286
         with:
           lvh-version: v0.0.15
           provision: 'false'
