Prepare for release v1.15.0
Signed-off-by: André Martins <andre@cilium.io>

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2024 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := "sha256:53e4473bc10a04ffe86e8de5b3e2b5cce6a72954b29ae50f329753820f46261b"
-export CLUSTERMESH_APISERVER_DIGEST := "sha256:dede7d9d56156f284d0a993e18b3a97901aa19b8ea63898b0c26cda46f0593fb"
-export DOCKER_PLUGIN_DIGEST := "sha256:3993c08f20bfb441223122f80a94fc5f940119cc70226ca279888673ae0ff3f7"
-export HUBBLE_RELAY_DIGEST := "sha256:137fc854260d59127d10234ec8ed2c389382bdd0c62911398e083cd7d0cdabec"
-export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:ddefe38b20d9f352685b486897a77787202b9f855d0679496792864c4fa59500"
-export OPERATOR_AWS_DIGEST := "sha256:7d4b7b931d15a14048cbcdf4ff9fdd432dbc03d12128e5c0e12d215631cade28"
-export OPERATOR_AZURE_DIGEST := "sha256:fcffa96ffcd271419933b127cfccd51c45a3d5ecbc92858f505a2b4e2d84c0f7"
-export OPERATOR_GENERIC_DIGEST := "sha256:a85e9ce2ca1c337050f4a2eab60255aaaeb386415de8a3810298a4a88dedf7b8"
-export OPERATOR_DIGEST := "sha256:c7f989c98b0be42a993d5ad425f1346d1f7d671edcc502b88ecd20a979d8db33"
+export CILIUM_DIGEST := ""
+export CLUSTERMESH_APISERVER_DIGEST := ""
+export DOCKER_PLUGIN_DIGEST := ""
+export HUBBLE_RELAY_DIGEST := ""
+export OPERATOR_ALIBABACLOUD_DIGEST := ""
+export OPERATOR_AWS_DIGEST := ""
+export OPERATOR_AZURE_DIGEST := ""
+export OPERATOR_GENERIC_DIGEST := ""
+export OPERATOR_DIGEST := ""
