install: Update image digests for v1.15.0
Generated from https://github.com/cilium/cilium/actions/runs/7731354384.

`quay.io/cilium/cilium:v1.15.0@sha256:9cfd6a0a3a964780e73a11159f93cc363e616f7d9783608f62af6cfdf3759619`
`quay.io/cilium/cilium:stable@sha256:9cfd6a0a3a964780e73a11159f93cc363e616f7d9783608f62af6cfdf3759619`

`quay.io/cilium/clustermesh-apiserver:v1.15.0@sha256:43feb49dfbaa82388dc653ce12c7626ce40ae375e9853d71b9f5cff0ce61d54a`
`quay.io/cilium/clustermesh-apiserver:stable@sha256:43feb49dfbaa82388dc653ce12c7626ce40ae375e9853d71b9f5cff0ce61d54a`

`quay.io/cilium/docker-plugin:v1.15.0@sha256:6c79c492da7b3574509a94b0c6b4ef0570c005aa6be5879b71d8e59e103f2a7b`
`quay.io/cilium/docker-plugin:stable@sha256:6c79c492da7b3574509a94b0c6b4ef0570c005aa6be5879b71d8e59e103f2a7b`

`quay.io/cilium/hubble-relay:v1.15.0@sha256:45b3ea70b73aee01644f800b8f6138c36446bfb130d2b88b0f75775ebe6a9ab6`
`quay.io/cilium/hubble-relay:stable@sha256:45b3ea70b73aee01644f800b8f6138c36446bfb130d2b88b0f75775ebe6a9ab6`

`quay.io/cilium/operator-alibabacloud:v1.15.0@sha256:ee03349caef5519f8e9123132cf17c85b771f8fff095c57f00a2af8bb3224b79`
`quay.io/cilium/operator-alibabacloud:stable@sha256:ee03349caef5519f8e9123132cf17c85b771f8fff095c57f00a2af8bb3224b79`

`quay.io/cilium/operator-aws:v1.15.0@sha256:cf45167a8bb336c763046553c6a97c0d7f12f7e2a498dfb2340fa27832a81b3a`
`quay.io/cilium/operator-aws:stable@sha256:cf45167a8bb336c763046553c6a97c0d7f12f7e2a498dfb2340fa27832a81b3a`

`quay.io/cilium/operator-azure:v1.15.0@sha256:498a9e940cddd4e58d401a13005b0784ed9597bfe1e5cf2f52b6ba9ccceee768`
`quay.io/cilium/operator-azure:stable@sha256:498a9e940cddd4e58d401a13005b0784ed9597bfe1e5cf2f52b6ba9ccceee768`

`quay.io/cilium/operator-generic:v1.15.0@sha256:e26ecd316e742e4c8aa1e302ba8b577c2d37d114583d6c4cdd2b638493546a79`
`quay.io/cilium/operator-generic:stable@sha256:e26ecd316e742e4c8aa1e302ba8b577c2d37d114583d6c4cdd2b638493546a79`

`quay.io/cilium/operator:v1.15.0@sha256:949ec05e962d370437deb6ca4b27b05b8e9c8077bfa6a5

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2024 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := ""
-export CLUSTERMESH_APISERVER_DIGEST := ""
-export DOCKER_PLUGIN_DIGEST := ""
-export HUBBLE_RELAY_DIGEST := ""
-export OPERATOR_ALIBABACLOUD_DIGEST := ""
-export OPERATOR_AWS_DIGEST := ""
-export OPERATOR_AZURE_DIGEST := ""
-export OPERATOR_GENERIC_DIGEST := ""
-export OPERATOR_DIGEST := ""
+export CILIUM_DIGEST := "sha256:9cfd6a0a3a964780e73a11159f93cc363e616f7d9783608f62af6cfdf3759619"
+export CLUSTERMESH_APISERVER_DIGEST := "sha256:43feb49dfbaa82388dc653ce12c7626ce40ae375e9853d71b9f5cff0ce61d54a"
+export DOCKER_PLUGIN_DIGEST := "sha256:6c79c492da7b3574509a94b0c6b4ef0570c005aa6be5879b71d8e59e103f2a7b"
+export HUBBLE_RELAY_DIGEST := "sha256:45b3ea70b73aee01644f800b8f6138c36446bfb130d2b88b0f75775ebe6a9ab6"
+export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:ee03349caef5519f8e9123132cf17c85b771f8fff095c57f00a2af8bb3224b79"
+export OPERATOR_AWS_DIGEST := "sha256:cf45167a8bb336c763046553c6a97c0d7f12f7e2a498dfb2340fa27832a81b3a"
+export OPERATOR_AZURE_DIGEST := "sha256:498a9e940cddd4e58d401a13005b0784ed9597bfe1e5cf2f52b6ba9ccceee768"
+export OPERATOR_GENERIC_DIGEST := "sha256:e26ecd316e742e4c8aa1e302ba8b577c2d37d114583d6c4cdd2b638493546a79"
+export OPERATOR_DIGEST := "sha256:949ec05e962d370437deb6ca4b27b05b8e9c8077bfa6a5b9b4d80d08a26d4fee"
