--- a/.github/workflows/tests-datapath-verifier.yaml
+++ b/.github/workflows/tests-datapath-verifier.yaml
@@ -79,6 +79,9 @@ jobs:
           - kernel: '5.4-20240201.165956'
             ci-kernel: '54'
           # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
+          - kernel: 'rhel8-20240201.165956'
+            ci-kernel: '54'
+          # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
           - kernel: '5.10-20240201.165956'
             ci-kernel: '510'
           # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
