--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -225,8 +225,8 @@ data:
 {{- if not .Values.envoy.enabled }}
   # Port to expose Envoy metrics (e.g. "9964"). Envoy metrics listener will be disabled if this
   # field is not set.
-  {{- if and .Values.proxy.prometheus.enabled .Values.envoy.prometheus.enabled }}
-  proxy-prometheus-port: "{{ .Values.proxy.prometheus.port | default .Values.envoy.prometheus.port }}"
+  {{- if .Values.envoy.prometheus.enabled }}
+  proxy-prometheus-port: "{{ .Values.envoy.prometheus.port }}"
   {{- end }}
 {{- end }}
 
