--- a/install/kubernetes/cilium/templates/cilium-envoy/service.yaml
+++ b/install/kubernetes/cilium/templates/cilium-envoy/service.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.envoy.enabled (not .Values.preflight.enabled) .Values.proxy.prometheus.enabled .Values.envoy.prometheus.enabled }}
+{{- if and .Values.envoy.enabled (not .Values.preflight.enabled) .Values.envoy.prometheus.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,7 +8,7 @@ metadata:
   annotations:
   {{- if not .Values.envoy.prometheus.serviceMonitor.enabled }}
     prometheus.io/scrape: "true"
-    prometheus.io/port: {{ .Values.proxy.prometheus.port | default .Values.envoy.prometheus.port | quote }}
+    prometheus.io/port: {{ .Values.envoy.prometheus.port | quote }}
   {{- end }}
   {{- with .Values.envoy.annotations }}
     {{- toYaml . | nindent 4 }}
@@ -26,7 +26,7 @@ spec:
     k8s-app: cilium-envoy
   ports:
   - name: envoy-metrics
-    port: {{ .Values.proxy.prometheus.port | default .Values.envoy.prometheus.port }}
+    port: {{ .Values.envoy.prometheus.port }}
     protocol: TCP
     targetPort: envoy-metrics
 {{- end }}
