--- a/.github/workflows/conformance-clustermesh.yaml
+++ b/.github/workflows/conformance-clustermesh.yaml
@@ -55,7 +55,7 @@ env:
   kind_version: v0.20.0
   # renovate: datasource=docker depName=kindest/node
   k8s_version: v1.27.3
-  cilium_cli_ci_version:
+  cilium_cli_ci_version: 74a81812845e103fc0b7c8130c67ed69945ee3de
   CILIUM_CLI_MODE: helm
   clusterName1: cluster1-${{ github.run_id }}
   clusterName2: cluster2-${{ github.run_id }}
