--- a/.github/workflows/conformance-k8s-kind-network-policies.yaml
+++ b/.github/workflows/conformance-k8s-kind-network-policies.yaml
@@ -24,7 +24,7 @@ env:
   # renovate: datasource=github-releases depName=kubernetes-sigs/kind
   kind_version: v0.20.0
   cluster_name: cilium-testing
-  cilium_cli_ci_version:
+  cilium_cli_ci_version: 74a81812845e103fc0b7c8130c67ed69945ee3de
   CILIUM_CLI_MODE: helm
   # renovate: datasource=docker depName=kindest/node
   k8s_version: v1.27.3
